<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Home" />
    <item
        android:id="@+id/navigation_rides"
        android:icon="@drawable/ic_baseline_directions_car_24"
        android:title="@string/my_rides"/>

    <item
        
        android:id="@+id/navigation_addRide"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="Add"/>
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"/>



</menu>