<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".PhoneAuthActivity">

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="sans-serif"
        android:text="@string/enter_your_phone_number"
        android:textAlignment="center"

        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081"
        tools:ignore="ExtraText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="55dp"
        android:text="@string/phoneLable"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:hint="Phone Number"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        app:layout_constraintVertical_bias="0.017"
        app:startIconDrawable="@drawable/ic_baseline_phone_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/_961" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button

        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/continuephone"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_200"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:layout_constraintVertical_bias="0.575" />
</androidx.constraintlayout.widget.ConstraintLayout>