<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".PassengerRide">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/please_fill_this_form_to_add_your_ride"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout9"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="Ride label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.095"
        app:startIconDrawable="@drawable/ic_baseline_directions_car_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_passengerRideName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout12"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="Departure location"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout9"
        app:layout_constraintVertical_bias="0.033"
        app:startIconDrawable="@drawable/ic_baseline_add_location_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_passengersource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout11"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="Departure time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
        app:layout_constraintVertical_bias="0.056"
        app:startIconDrawable="@drawable/ic_baseline_access_time_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/btn_passengerSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/desyination_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout12"
        app:layout_constraintVertical_bias="0.041"
        app:startIconDrawable="@drawable/ic_baseline_add_location_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_passengerDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_addPassengerRide"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:text="@string/add"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout11"
        app:layout_constraintVertical_bias="0.328" />

</androidx.constraintlayout.widget.ConstraintLayout>