<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardofRide"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        >

        <LinearLayout
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <LinearLayout


                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/titelBackground"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:background="@color/teal_700"
                    android:orientation="horizontal">

                    <TextView
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:id="@+id/textViewNameofRide"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:fontFamily="@font/roboto_slab"
                        android:text="home"
                        android:textAllCaps="true"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="@color/white" />


                </LinearLayout>


            </LinearLayout>


            <!-- Title, secondary and supporting text -->


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="Departure location" />

                    <TextView
                        android:id="@+id/srcLocationRide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:text="Naameh"

                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/desyination_location" />

                    <TextView
                        android:id="@+id/destLocationRide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:gravity="start"
                        android:text="Beirut"

                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/departure_time" />

                    <TextView
                        android:id="@+id/startTimeRide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:text="3:00 pm"

                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/passengerText"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/seats_availble" />

                    <TextView
                        android:id="@+id/passengerNumberRide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:text="3"

                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/rideTypeText"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="Ride type" />

                    <TextView
                        android:id="@+id/rideView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:text="Driver"

                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dltBtn"
                style="@style/Widget.AppCompat.ActionButton.CloseMode"
                app:icon="@drawable/ic_baseline_delete_24"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                app:iconTint="@color/quantum_error_light"
                android:backgroundTint="@color/white"
                />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>